--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,2 +1,78 @@
 @import "tailwindcss";
+@font-face {
+    font-family: 'themeFont';
+    src: url("/fonts/Camden-6RYax.ttf");
+    /* font-weight: 700; */
+};
 
+body {
+    background-color: #fefefe;
+    font-family: 'themeFont';
+    /* font-weight: 900; */
+}
+
+.techStackImageHeight {
+    height: 136px
+}
+
+
+
+/* MEDIA QUERY */
+
+@media only screen and (min-width: 576px) and (max-width: 768px) {
+    .techStackImageHeight {
+        height: 84px
+    }
+}
+
+@media (max-width: 576px) {
+    .techStackImageHeight {
+        height: 102px
+    }
+}
+
+
+@keyframes marquee {
+    0% {
+      transform: translateX(0);
+    }
+    100% {
+      transform: translateX(-50%);
+    }
+  }
+  
+  .animate-marquee {
+    animation: marquee 30s linear infinite;
+    width: calc(200% + 2rem);
+  }
+  
+  .animate-marquee:hover {
+    animation-play-state: paused;
+  }
+
+
+
+
+
+::-webkit-scrollbar {
+  width: 4px;
+  height: 4px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+@keyframes marquee {
+  0%   { transform: translateX(0%); }
+  100% { transform: translateX(-100%); }
+}
+
+.marquee {
+  animation: marquee 30s linear infinite ;
+}
