--- a/src/components/Project/project.css
+++ b/src/components/Project/project.css
@@ -1,29 +1,18 @@
 :root {
     --card_width: 300px;
     --row_increment: 10px;
-    --card_border_radius: 16px;
     --cardSm: 26;
     --cardMd: 33;
     --cardLg: 44;
     --cardXl: 48;
-    --cardXxl: 54;
+    --cardXxl: 52;
   
     --hue: 207;
     --sat: 90%;
     --lig: 61%;
-    --first-color: hsl(var(--hue), var(--sat), var(--lig));
-    --first-color-alt: hsl(var(--hue), var(--sat), 57%); /* -4% */
-    --title-color: hsl(var(--hue), 12%, 15%);
-    --text-color: hsl(var(--hue), 12%, 45%);
-    --text-color-light: hsl(var(--hue), 8%, 75%);
-    --text-color-lighten: hsl(var(--hue), 8%, 92%);
-    --body-color: hsl(var(--hue), 100%, 99%);
-    --container-color: #fff;
   
-    --body-font: "Poppins", sans-serif;
-    --normal-font-size: 0.938rem;
-    --small-font-size: 0.813rem;
-    --smaller-font-size: 0.75rem;
+    --normal-font-size: 1.1rem;
+    --smaller-font-size: 0.65rem;
   }
   
   
@@ -53,11 +42,9 @@
     grid-auto-rows: var(--row_increment);
   }
   
-  .projectContainer .projectCard {
-    box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
-    margin: 17px 13px;
-    border-radius: var(--card_border_radius);
-    overflow: hidden;
+  .projectCard {
+    box-shadow: rgba(0, 0, 0, 0.26) 2.8px 2.8px 3.6px;
+    border: 1px solid rgba(128, 128, 128, 0.562);
   }
   
   .projectsTitle {
@@ -69,7 +56,6 @@
   }
   
   .modal-open {
-    background-color: rgba(0, 0, 0, 0.5);
     pointer-events: none;
     filter: blur(2px);
   }
@@ -82,7 +68,7 @@
   
   .projectContainer .projectCard:hover img {
     filter: grayscale(0%);
-    transform: scale(1.1);
+    transform: scale(1.05 );
   }
   
   .projectsModal {
@@ -90,13 +76,13 @@
     background: linear-gradient(
       180deg,
       hsla(var(--hue), 24%, 40%, 0.3) 0%,
-      hsla(var(--hue), 24%, 4%, 1) 95%
+      hsla(var(--hue), 24%, 4%, 1) 125%
     );
     transition: 0.3s;
   }
   
   .projectLink {
-    background-color: var(--first-color);
+    /* background-color: #42a5f5; */
     box-shadow: 0 8px 24px hsla(var(--hue), var(--sat), var(--lig), 0.25);
   }
   
