--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,7 @@
 body {
     background-color: #fefefe;
     font-family: 'themeFont';
-    /* font-weight: 900; */
+    word-spacing: 0.5rem;
 }
 
 .techStackImageHeight {
@@ -17,11 +17,29 @@ body {
 
 
 
+.sectionHeading{
+  font-size: 3rem;
+}
+.sectionTextContent{
+  font-size: 1.2rem;
+  font-weight: 500;
+}
+
+
 /* MEDIA QUERY */
+
 
 @media only screen and (min-width: 576px) and (max-width: 768px) {
     .techStackImageHeight {
         height: 84px
+    }
+    
+    .sectionHeading{
+      font-size: 2.5rem;
+    }
+
+    .sectionTextContent{
+      font-size: 1rem;
     }
 }
 
@@ -29,26 +47,16 @@ body {
     .techStackImageHeight {
         height: 102px
     }
+
+    .sectionHeading{
+      font-size: 1.85rem;
+    }
+    
+    .sectionTextContent{
+      font-size: 1rem;
+    }
 }
 
-
-@keyframes marquee {
-    0% {
-      transform: translateX(0);
-    }
-    100% {
-      transform: translateX(-50%);
-    }
-  }
-  
-  .animate-marquee {
-    animation: marquee 30s linear infinite;
-    width: calc(200% + 2rem);
-  }
-  
-  .animate-marquee:hover {
-    animation-play-state: paused;
-  }
 
 
 
@@ -68,11 +76,4 @@ body {
   background: transparent;
 }
 
-@keyframes marquee {
-  0%   { transform: translateX(0%); }
-  100% { transform: translateX(-100%); }
-}
 
-.marquee {
-  animation: marquee 30s linear infinite ;
-}
